# Limousine-COOP-Writes

./: .gitignore  Dockerfile  Makefile  README.md
Playground/src/: CMakeLists.txt  Makefile  fill_factor.csv  inserts_vs_segsize.csv  old_runner.cpp  runner.cpp  shape_experiments.cpp  valgrind-out copy 2.txt  valgrind-out copy.txt  valgrind-out.txt
Playground/src/experiments/: TEMPLATE.cpp  benchmark_workloads_uniform.cpp  better_skew.cpp  common.cpp  data_vs_latency_breakdown.cpp  experiments.h  insert_metrics.cpp  inserts_vs_index_power.cpp  inserts_vs_rlatency.cpp  inserts_vs_wlatency.cpp  mem_perf_tradeoff.cpp  test.cpp  time_workload_uniform.cpp  time_workloads_uniform.cpp
Playground/src/experiments/before_fast/: inserts_vs_rlatency.cpp
Playground/src/experiments/dontcomp/: compare_workloads.cpp  inserts_vs_index_power.cpp  inserts_vs_wlatency.cpp
Playground/src/include/buffered/: fast_index.hpp  pgm_index_buffered.hpp
Playground/src/include/debug/: debug.hpp  metrics.hpp  progressbar.hpp  zipfian.h
Playground/src/include/pgm/: pgm_index.hpp  (+1 more)
Playground/src/paddings/: 32_A_paddingTops.txt  4_A_paddingTops.txt  64_A_paddingTops.txt  inspect_paddings.ipynb
Playground/src/results/: analysis.ipynb
src/: CMakeLists.txt  Makefile  runner.cpp
src/experiments/: common.cpp  data_vs_latency_breakdown.cpp  experiments.h  insert_metrics.cpp  inserts_vs_index_power.cpp  inserts_vs_rlatency.cpp  inserts_vs_wlatency.cpp  mem_perf_tradeoff.cpp
src/experiments/experiments/: common.cpp  experiments.h  insert_metrics.cpp  inserts_vs_index_power.cpp
src/include/ALEX/: alex_base.h
src/include/buffered/: pgm_index_buffered.hpp
src/include/coop/: pgm_index_buffered.hpp
src/include/debug/: metrics.hpp
src/include/oop/: pgm_index_buffered.hpp
src/include/pgm/: pgm_index_dynamic.hpp  piecewise_linear_model.hpp
(+37 files in other folders)
